--- a/index.html
+++ b/index.html
@@ -103,16 +103,15 @@
     <main>
       <section class="hero container">
         <img class="hero__img" src="/hero.jpg" alt="Profile picture" />
-        <h2 class="hero__subtitle">Hi, I'm Ramzi 👋</h2>
+        <h2 class="hero__subtitle">Hi, I'm 4CE 👋</h2>
         <h1 class="hero__title">
-          FRONT-END <br />
-          WEB DEVELOPER.
+          EXPERIENCED <br />
+          LOGO DESIGNER.
         </h1>
         <p class="hero__description">
-          A passionate <strong>Frontend / Fullstack-Jamstack</strong> web
-          developer and <strong>UI/UX</strong>
-          enthusiast specialized in building stunning pixel-perfect interactive
-          websites/applications.
+          A passionate and <strong>experienced</strong> logos, thumbnails, & commissions
+          designer and <strong>UI/UX</strong>
+          enthusiast specialized in building stunning pixel-perfect designs
         </p>
         <a class="hero__btn btn" href="#">Reach out</a>
       </section>
@@ -120,33 +119,26 @@
         <div class="about__content">
           <h2 class="about__title">About</h2>
           <p class="about__description">
-            Hello there! I'm Ramzi, a
-            <strong>Frontend / Fullstack-Jamstack</strong> web developer based
-            near Montreal. I wake up in the morning, grab a cup of timmies
-            coffee, open up my laptop and build things that live on the web all
-            day, everyday.
+            Hello there! I'm 4CE, a
+            <strong>Experienced & Stunning</strong> designer, i have
+            70+ vouches from my happy customers and i have worked for
+            dozens of games as a designer.
           </p>
           <p class="about__description">
             People who know me say I'm obsessed, that's fair, I am very driven
-            and love learning new things.
-          </p>
-          <p class="about__description">
-            I recently created a YouTube channel called
-            <a>Slaying The Dragon</a> where I upload videos on front-end web
-            development topics.
+            and love learning new things and styles whilst designing.
           </p>
           <hr class="about__hr" />
           <h3 class="about__subtitle">Technologies</h3>
           <div class="about__ul-container">
             <ul class="about__ul">
-              <li class="about__list">JavaScript (ES6+)</li>
-              <li class="about__list">CSS</li>
-              <li class="about__list">HTML</li>
+              <li class="about__list">Adobe Photoshop</li>
+              <li class="about__list">Photopea</li>
             </ul>
             <ul class="about__ul">
-              <li class="about__list">ReactJS</li>
-              <li class="about__list">NextJS</li>
-              <li class="about__list">TailwindCSS</li>
+              <li class="about__list">HTML</li>
+              <li class="about__list">CSS</li>
+              <li class="about__list">JS</li>
             </ul>
           </div>
         </div>
@@ -160,9 +152,9 @@
         </div>
       </section>
       <section id="featured" class="featured container section">
-        <h3 class="featured__subtitle">Featured project</h3>
+        <h3 class="featured__subtitle">Featured Designs</h3>
         <div class="featured__wrapper">
-          <h2 class="featured__title">Slaying The Dragon</h2>
+          <h2 class="featured__title">Dah Hood Red Moon Design</h2>
           <a
             aria-label="link featured projects"
             class="featured__link"
@@ -184,10 +176,9 @@
           </a>
         </div>
         <p class="featured__description">
-          Cillum voluptate tempor cillum culpa cupidatat labore voluptate
-          ullamco voluptate culpa sunt nulla non. Ad cupidatat dolore quis amet
-          pariatur consectetur ullamco. Officia quis id velit duis cupidatat
-          sunt deserunt do aliquip nulla laboris.
+          This design is one of the bestselling ones
+          I ever did, it got me alot of compliments
+          honestly 😭
         </p>
         <div class="featured__info-container">
           <div>
