--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- End of Mobile Navigation -->
     <main>
       <section class="hero container">
-        <img class="hero__img" src="/hero.jpg" alt="Profile picture" />
+        <img class="hero__img" src="https://cdn.discordapp.com/avatars/1120629916564729897/7ffaf2b670aa25687383da2b4c759998.png?size=1024" alt="Profile picture" />
         <h2 class="hero__subtitle">Hi, I'm 4CE 👋</h2>
         <h1 class="hero__title">
           EXPERIENCED <br />
@@ -154,7 +154,7 @@
       <section id="featured" class="featured container section">
         <h3 class="featured__subtitle">Featured Designs</h3>
         <div class="featured__wrapper">
-          <h2 class="featured__title">Dah Hood Red Moon Design</h2>
+          <h2 class="featured__title">Best-selling Designs as of July 2023</h2>
           <a
             aria-label="link featured projects"
             class="featured__link"
@@ -176,30 +176,18 @@
           </a>
         </div>
         <p class="featured__description">
-          This design is one of the bestselling ones
-          I ever did, it got me alot of compliments
+          These designs are the bestselling ones
+          i made as of July 2023, it got me alot of compliments too
           honestly 😭
         </p>
-        <div class="featured__info-container">
+        
           <div>
-            <h3 class="featured__label">Tech stack</h3>
-            <ul class="featured__tech-stack">
-              <li class="featured__info">TailwindCSS</li>
-              <li class="featured__info">ReactJS</li>
-              <li class="featured__info">React-hook-form</li>
-              <li class="featured__info">NextJS</li>
-              <li class="featured__info">Axios</li>
-              <li class="featured__info">Supabase</li>
-              <li class="featured__info">Stripe</li>
-            </ul>
-          </div>
-          <div>
-            <h3 class="featured__label">Project type</h3>
-            <p class="featured__info">Fullstack-Jamstack</p>
+            <h3 class="featured__label">Designs type</h3>
+            <p class="featured__info">Game Icons for DaHood games</p>
           </div>
           <div>
             <h3 class="featured__label">Timeline</h3>
-            <p class="featured__info">December 2022 - present</p>
+            <p class="featured__info">July 2023</p>
           </div>
         </div>
         <div class="featured__img-container">
