--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <p class="featured__info">Game Icons for DaHood games</p>
           </div>
           <div>
-            <h3 class="featured__label">Timeline</h3>
+            <h3 class="featured__label">As of</h3>
             <p class="featured__info">July 2023</p>
           </div>
         </div>
@@ -188,8 +188,8 @@
             <img
               class="lazy loading"
               src="https://via.placeholder.com/1920x968"
-              data-src="/slayingthedragon.png"
-              alt="Slaying The Dragon hero"
+              data-src="https://cdn.discordapp.com/attachments/1127635879981236315/1128426280275157072/IMG_0699.png"
+              alt="Dahood YouTube Thumbnail"
             />
           </div>
           <div class="featured__img-wrapper">
